// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders disabled 1`] = `
<div>
  <div
    class="pf-v5-c-radio"
  >
    <input
      aria-invalid="false"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-3"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      disabled=""
      id="test-radio"
      name="test-radio-name"
      type="radio"
      value="default-value"
    />
    <label
      class="pf-v5-c-radio__label pf-m-disabled"
      for="test-radio"
    >
      default-label
    </label>
  </div>
</div>
`;

exports[`RadioButton renders with default props 1`] = `
<div>
  <div
    class="pf-v5-c-radio"
  >
    <input
      aria-invalid="false"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-1"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="test-radio"
      name="test-radio-name"
      type="radio"
      value="default-value"
    />
    <label
      class="pf-v5-c-radio__label"
      for="test-radio"
    >
      default-label
    </label>
  </div>
</div>
`;

exports[`RadioButton renders with item 1`] = `
<div>
  <div
    class="pf-v5-c-radio"
  >
    <input
      aria-invalid="false"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-2"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="test-radio"
      name="test-radio-name"
      type="radio"
      value="some-value"
    />
    <label
      class="pf-v5-c-radio__label"
      for="test-radio"
    >
      some-label
    </label>
  </div>
</div>
`;
